<resources>
    <string name="app_name">CaRent</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_booking">Booking</string>
    <string name="title_car_list">Car List</string>
    <string name="site_link">http://carent.zzz.com.ua/</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="no_connection">Тo internet connection available!</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="continue_">Continue</string>
    <string name="createaccount">Create account</string>
    <string name="alreadyhave">Already have an account?</string>
    <string name="emptyfield">This field cannot be empty!</string>
    <string name="incorrect">Incorrect login or password</string>
    <string name="errorconnection">Connection error.</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="successfuly_login">You have successfully logged in!</string>\
    <string name="successfuly_signup">You have successfully create account!</string>
    <string name="account">Account</string>
    <string name="verificated">User verified</string>
    <string name="noverificated">User not verified!</string>
    <string name="firstname">First name</string>
    <string name="secondname">Second name</string>
    <string name="middlename">Middle name</string>
    <string name="license_id">ID License</string>
    <string name="license_date">Date License</string>
    <string name="photo_license">License Photo</string>
    <string name="photo_user">Usre Photho</string>
    <string name="photo_passport">Passport Photo</string>
    <string name="phone_number">Phone number</string>
    <string name="verified_status_info">The inscription "not verified" means that you can not create booking cars. To obtain the status of "virified," you must expect confirmation from the administration.</string>
    <string name="banned">Your account has been banned!</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="reason">Reason</string>
    <string name="editaccount">Edit Account</string>
    <string name="logout">Log out</string>
    <string name="wannaexit">Do you really want to leave? Your progress will be lost</string>
    <string name="exit">Exit</string>
    <string name="accountcreateerror">An account with such an email or login already exists!</string>
    <string name="congratulations">Congratulations! You have successfully created an account in the "CaRent" system. Please go to the "account" tab and fill in all the details. This is required for further work in the application. Otherwise, you will not be able to create a reservation and use our service!</string>
    <string name="letsgo">Let`s go!</string>
    <string name="changepass">Your passoword has been changed!</string>
    <string name="changeinfo">Information updated! Expect an administration check to be able to book!</string>
    <string name="changepassword">Change password</string>
    <string name="save">Save</string>
    <string name="reflesh">Reflesh</string>
    <string name="savechanges">Save changes?</string>
    <string name="oldpass">Old password</string>
    <string name="newpass">New password</string>
    <string name="newpassrepeat">Repeat new Password</string>
    <string name="errorrequest">There was an error sending the request</string>
    <string name="incorrectpass">Password incorrect!</string>
    <string name="dnmatch">Passwords do not match</string>
    <string name="wannachangeimage">Do you wanna change image?</string>
    <string name="price">Price</string>
    <string name="money">UAH</string>
    <string name="book">Book</string>
    <string name="fuel_capacity"> L/100 km</string>
    <string name="withcondition">Air-conditioned</string>
    <string name="notavailable">Not available!</string>
    <string name="systemid">System ID: </string>
    <string name="car">Car</string>
    <string name="date_start">Date of the start of the lease: </string>
    <string name="therm">Term: </string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="status">Status: </string>
    <string name="payexpected">Payment is expected</string>
    <string name="completed">Completed</string>
    <string name="paid">Paid</string>
    <string name="canceled">Canceled</string>
    <string name="active">Active</string>
    <string name="viewbooking">View booking</string>
    <string name="nullorder">You have not booked any car yet!</string>
    <string name="pay">Pay</string>
    <string name="wascanceled">Booking is already canceled!</string>
    <string name="cancelpaid">Can not cancel paid booking!</string>
    <string name="cancelactive">Reservation can not be canceled because it is already active!</string>
    <string name="cancelcomplited">Reservation can not be canceled because it is already completed!</string>
    <string name="successorder">You have successfully booked a car! Now you need to make a payment in the program, or at the parking lot.</string>
    <string name="ordererror">There was an error while making a reservation!</string>
    <string name="successcancel">Booking is canceled!</string>
    <string name="questcancel">Do you really want to cancel your reservation? This action can not be canceled!</string>
    <string name="reserved">Reserved</string>
    <string name="showqr">Show QR link</string>
    <string name="visitwebsite">Visit our website</string>
    <string name="visitoffice">Visit our office</string>
    <string name="contacts">Contacts:</string>
    <string name="contacts1">Phone number: 8 (800) 555 35 35</string>
    <string name="contacts2">Email: carentproject@gmail.com</string>
    <string name="contacts3">Address: Zarichanska St, 10, Khmel`nyts`kyi, Khmel`nyts`ka oblast, 29000</string>
</resources>