<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_carname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/book_carimage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/body" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_startdate_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/book_startdate_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:hint="@string/startdate"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/book_term_text"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/therm"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/book_seekterm"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:max="20"
            android:progress="1" />

        <TextView
            android:id="@+id/book_price"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <Button
            android:id="@+id/book_book"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/book" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>